# voice_agent

./: .condarc  .gitignore  README.md  RUNBOOK.md  gradio_realtime_stt.py  start_vllm.sh  test_realtime.py  test_realtime_validation.py  vllm_recovered_config_backup_2026-02-13.md
voice-agent/: Makefile  README.md  RUNBOOK.md  STARTUP_REPORT.md  pyproject.toml
voice-agent/infra/livekit/: docker-compose.yml  livekit.yaml
voice-agent/src/voice_agent/: __init__.py  config.py  lifecycle.py  logging.py  main.py  metrics.py  session.py  session_manager.py  tts_server.py
voice-agent/src/voice_agent/adapters/llm/: __init__.py  base.py  cerebras_openai.py
voice-agent/src/voice_agent/adapters/stt/: __init__.py  base.py  voxtral_http.py  voxtral_ws.py
voice-agent/src/voice_agent/adapters/tts/: __init__.py  base.py  chatterbox_http.py  chatterbox_ws.py
voice-agent/src/voice_agent/pipeline/: audio_codec.py  factory.py  interruption_controller.py  transcript_broadcaster.py  tts_chunker.py  vad_endpointing.py  voxtral_realtime_stt_service.py
voice-agent/src/voice_agent/token_server/: __init__.py  main.py  schemas.py
voice-agent/tests/integration/: test_simulated_streaming_turns.py  test_tts_tags_and_clone.py
voice-agent/tests/unit/: test_adaptive_text_aggregator.py  test_cerebras_adapter.py  test_chatterbox_adapter.py  test_interruption_controller.py  test_tts_chunker.py  test_tts_server_streaming.py  test_vad_endpointing.py  test_voxtral_adapter.py  test_voxtral_realtime_stt.py
voice-agent/web/: app.js  index.html  styles.css  tts.css  tts.html  tts.js
(+5 files in other folders)
